--- a/pokedex/templates/index.html
+++ b/pokedex/templates/index.html
@@ -9,8 +9,8 @@
             <p>{{ pokemon.type }}</p>
         </li>  
         {% endfor %}
-    </ul> ctrl+ shift+7 {% endcomment %}
-    <a href="{% url "pokedex:add_pokemon" %}">Crear pokemon</a>
+    </ul> ctrl+ shift+7 
+    <a href="{% url "pokedex:add_pokemon" %}">Crear pokemon</a>{% endcomment %}
     <div class="card-group">
         {% for pokemon in pokemons %}
             <div class="card">
@@ -19,7 +19,15 @@
                     <h5 class="card.title">{{ pokemon }}</h5>
                     <p class="class-text">Entrenador: {{ pokemon.trainer }}</p>
                     <p class="class-text">Peso: {{ pokemon.weight }}</p>
-                    <a href="pokemon/{{ pokemon.id }}" class="btn btn-primary">Detalles</a>
+                    <a href="pokemon/{{ pokemon.id }}" class="btn btn-primary">
+                        <i class="fa-solid fa-eye"></i>
+                    </a>
+                    <a href="edit_pokemon/{{ pokemon.id }}" class="btn btn-primary">
+                        <i class="fa-solid fa-pencil"></i>
+                    </a>
+                    <a href="delete_pokemon/{{ pokemon.id }}" class="btn btn-danger">
+                        <i class="fa-solid fa-trash"></i>
+                    </a>
                 </div>
             </div>
         {% endfor %}
