Lista de Entrenadores

--- a/pokedex/templates/base.html
+++ b/pokedex/templates/base.html
@@ -32,6 +32,10 @@
                                 </li>
 
                                 <li class="nav-item">
+                                    <a class="nav-link" href=" {% url 'pokedex:trainers_list' %} ">Lista de Entrenadores</a>
+                                </li>
+
+                                <li class="nav-item">
                                     <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                                 </li>
                                 {% else %}
